// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ManageServersRow /> > renders auto-connect icon only if server is autoConnect 1`] = `
<div>
  <table
    class="w-full"
  >
    <thead
      class="hidden lg:table-header-group"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border"
      />
    </thead>
    <tbody
      class="lg:table-row-group flex flex-col gap-y-3"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary relative"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Auto-connect"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-check text-lm-brand dark:text-dm-brand"
            data-icon="check"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
              fill="currentColor"
            />
          </svg>
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1 font-bold"
          data-column="Name"
        >
          <a
            data-discover="true"
            href="/server/abc"
          >
            My server
          </a>
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1 max-lg:border-b-0"
          data-column="Base URL"
        >
          https://example.com
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1 text-right max-lg:absolute right-0 -top-1 mx-lg:pt-0"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<ManageServersRow /> > renders auto-connect icon only if server is autoConnect 2`] = `
<div>
  <table
    class="w-full"
  >
    <thead
      class="hidden lg:table-header-group"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border"
      />
    </thead>
    <tbody
      class="lg:table-row-group flex flex-col gap-y-3"
    >
      <tr
        class="group lg:table-row flex flex-col lg:border-0 border-y-2 border-lm-border dark:border-dm-border hover:bg-lm-primary dark:hover:bg-dm-primary group-[&]/card:hover:bg-lm-secondary dark:group-[&]/card:hover:bg-dm-secondary relative"
      >
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1"
          data-column="Auto-connect"
        />
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1 font-bold"
          data-column="Name"
        >
          <a
            data-discover="true"
            href="/server/abc"
          >
            My server
          </a>
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1 max-lg:border-b-0"
          data-column="Base URL"
        >
          https://example.com
        </td>
        <td
          class="border-lm-border dark:border-dm-border p-2 block lg:table-cell not-last:border-b-1 lg:border-b-1 before:lg:hidden before:content-[attr(data-column)] before:font-bold before:mr-1 text-right max-lg:absolute right-0 -top-1 mx-lg:pt-0"
        >
          <span>
            ManageServersRowDropdown
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
